# routes/api.php
@@ -18,9 +18,7 @@ use Illuminate\Support\Facades\Route;
 Route::group(['prefix' => '/v1'], function () {
     Route::group(['prefix' => '/auth'], function () {
         Route::post('/google-sign-in', [AuthController::class, 'googleSignIn']);
-    });
-
-    Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-        return $request->user();
+        Route::get('/user', [AuthController::class, 'user'])->middleware('auth:sanctum');
+        Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
     });
 });
